k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: sentiment-frontend
        image: nicolasritouet/sentiment-frontend
        ports:
        - containerPort: 80
