k8s/backend-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-backend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: sentiment-backend
