k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sentiment-backend
  labels:
    app: sentiment-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sentiment-backend
  template:
    metadata:
      labels:
        app: sentiment-backend
    spec:
      containers:
      - name: sentiment-backend
        image: nicolasritouet/sentiment-backend
        ports:
        - containerPort: 3001
---
apiVersion: v1
kind: Service
metadata:
  name: sentiment-backend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 3001
    protocol: TCP
    targetPort: 3001
  selector:
    app: sentiment-backend
