k8s/echoserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoserver
  namespace: echoserver
spec:
  ports:
    - port: 443
      targetPort: 8080
      protocol: TCP
  selector:
    app: echoserver
