k8s/frontend-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: sentiment-frontend-lb
spec:
  type: LoadBalancer
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: sentiment-frontend
