k8s/ingress-kuard.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mycs-api
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kuard
  namespace: mycs-api
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: kuard
    spec:
      containers:
      - image: gcr.io/kuar-demo/kuard-amd64:1
        imagePullPolicy: Always
        name: kuard
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kuard
  namespace: mycs-api
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: kuard
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard
  namespace: mycs-api
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/subnets: subnet-072986e842f02703a,subnet-080b46bb277b463ea,subnet-0c939aa53fa08c9da
    alb.ingress.kubernetes.io/tags: Environment=dev,Team=unicorn
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:335580229851:certificate/6c84a7f8-cbd8-4fac-b7a3-727e5e6d72a4
spec:
  rules:
    - host: kuard.mycs.blue
      http:
        paths:
          - path: /
            backend:
              serviceName: kuard
              servicePort: 80
